# VFM-Registration

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: install.sh  (+1 more)
src/vfm-reg/: CMakeLists.txt  package.xml  setup.py
src/vfm-reg/src/: download_baseline_models.py  prepare_scenes.py  print_errors.py  registration_node.py  visualize_scenes.py
src/vfm-reg/src/dataloader/: __init__.py  kitti_odometry.py  nclt.py  oxford_robotcar.py
src/vfm-reg/src/dataloader/robotcar_sdk/extrinsics/: ldmrs.txt  lms_rear.txt  nlct_velodyne.txt
src/vfm-reg/src/dataloader/robotcar_sdk/python/: README.md  build_pointcloud.py  camera_model.py  image.py  interpolate_poses.py  play_images.py  play_radar.py  play_velodyne.py  project_laser_into_camera.py  radar.py  transform.py  velodyne.py
src/vfm-reg/src/dip/: lrf.py  network.py
src/vfm-reg/src/dip/torch-nndistance/: .gitignore  README.md  build.py  test.py
src/vfm-reg/src/dip/torch-nndistance/src/: my_lib.cpp  my_lib_cuda.cpp  nnd_cuda.cu
src/vfm-reg/src/dip/torch-nndistance/torch_nndistance/: __init__.py
src/vfm-reg/src/fcgf/: fcgf.py
src/vfm-reg/src/gcl/model/: __init__.py  mlp.py  projection_head.py  residual_block.py  resunet.py  simpleunet.py
src/vfm-reg/src/gedi/: gedi.py
src/vfm-reg/src/gedi/backbones/pointnet2_ops_lib/: setup.py
src/vfm-reg/src/pointdsc/: PointDSC.py  SE3.py  common.py
src/vfm-reg/src/spinnet/: ThreeDCCN.py  common.py  model.py
src/vfm-reg/src/vfm_reg/: descriptors.py  image_features.py  pose_graph_optimization.py  read_h5.py  utils.py
(+110 files in other folders)
