<?xml version="1.0"?>
<package format="2">
  <name>vfm_reg</name>
  <version>0.0.0</version>
  <description>The play_data package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="author@email.com">Author</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
